--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,15 @@
 @tailwind utilities;
 
 @layer components {
-    .container-width {
-        @apply max-w-3xl sm:max-w-4xl lg:max-w-5xl mx-auto px-4 sm:px-8 lg:px-12 py-8;
+  .container-width {
+    @apply max-w-3xl sm:max-w-4xl lg:max-w-5xl mx-auto px-4 sm:px-8 lg:px-12 py-8;
+  }
+}
 
-    }
+body {
+  @apply bg-white text-black;
+}
+
+.dark body {
+  @apply bg-black text-white;
 }
