--- a/src/styles/Intro.css
+++ b/src/styles/Intro.css
@@ -1,10 +1,15 @@
-.intro-container{
+.intro-container {
+    display: flex;
+    align-items: center;
+    gap: 2rem;
     text-align: left;
     margin-top: 4rem;
     font-size: 2rem;
-    font-weight: bold;
     font-family: 'Inter', sans-serif;
+    flex-direction: column;
+
 }
+
 
 .intro-typewriter .Typewriter{
     font-family: 'Space Grotesk', sans-serif;
@@ -16,3 +21,25 @@
     max-width: 420px; 
     width: fit-content;
 }
+.intro-title {
+    font-weight: bolder;
+    font-size: 3rem;
+    text-align: left;
+  }
+  
+
+@media (min-width: 768px) {
+    .intro-container {
+      flex-direction: row;
+      align-items: center;
+    }
+    .intro-title {
+        text-align: center;
+      }
+    
+      .intro-typewriter .Typewriter {
+        text-align: center;
+        margin: 0 auto;
+      }
+
+  }
