--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Unbounded:wght@700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Unbounded:wght@700&display=swap'); */
 
 
 @font-face {
