--- a/src/styles/Intro.css
+++ b/src/styles/Intro.css
@@ -7,6 +7,7 @@
     font-size: 2rem;
     font-family: 'Inter', sans-serif;
     flex-direction: column;
+    align-items: center;
 
 }
 
@@ -32,6 +33,7 @@
     .intro-container {
       flex-direction: row;
       align-items: center;
+      justify-content: center;
     }
     .intro-title {
         text-align: center;
