nav bar web responsivenss

--- a/src/styles/Intro.css
+++ b/src/styles/Intro.css
@@ -37,6 +37,7 @@
     }
     .intro-title {
         text-align: center;
+        font-size: 1rem;
       }
     
       .intro-typewriter .Typewriter {
