--- a/src/styles/Intro.css
+++ b/src/styles/Intro.css
@@ -1,48 +1,50 @@
 .intro-container {
-    display: flex;
-    align-items: center;
-    gap: 2rem;
-    text-align: left;
-    margin-top: 4rem;
-    font-size: 2rem;
-    font-family: 'Inter', sans-serif;
-    flex-direction: column;
-    align-items: center;
-
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+  margin-top: 4rem;
+  font-size: 2rem;
+  font-family: 'Inter', sans-serif;
+  flex-direction: row;
+  text-align: left;
 }
 
-
-.intro-typewriter .Typewriter{
-    font-family: 'Space Grotesk', sans-serif;
-    font-size: 1.2rem;
-    margin-top: 1.0rem;
-    text-align: left;
-    white-space: normal;
-    line-height: 1.5;
-    max-width: 420px; 
-    width: fit-content;
-}
 .intro-title {
-    font-weight: bolder;
-    font-size: 3rem;
-    text-align: left;
-  }
-  
+  font-weight: bolder;
+  font-size: 3rem;
+  text-align: left;
+}
 
-@media (min-width: 768px) {
-    .intro-container {
-      flex-direction: row;
-      align-items: center;
-      justify-content: center;
-    }
-    .intro-title {
-        text-align: center;
-        font-size: 1rem;
-      }
-    
-      .intro-typewriter .Typewriter {
-        text-align: center;
-        margin: 0 auto;
-      }
+.intro-typewriter .Typewriter {
+  font-family: 'Space Grotesk', sans-serif;
+  font-size: 1.2rem;
+  margin-top: 1rem;
+  text-align: left;
+  white-space: normal;
+  line-height: 1.5;
+  max-width: 420px;
+  width: fit-content;
+}
 
+
+@media (max-width: 768px) {
+  .intro-container {
+    flex-direction: column;
+    font-size: 1rem;
+    gap: 1rem;
+    margin-top: 2rem;
   }
+
+  .intro-title {
+    font-size: 2rem;
+    text-align: center;
+  }
+
+  .intro-typewriter .Typewriter {
+    font-size: 0.95rem;
+    text-align: center;
+    margin: 0 auto;
+    max-width: 90%;
+  }
+}
